--- a/views/layout.html
+++ b/views/layout.html
@@ -24,6 +24,12 @@
     We recommend you use the beforeMain block for global page components
     like headers or navigation.
   #}
+  <ul>
+    {% for localization in apos.workflow.localizations() %}
+      <li><a href="{{ localization._url | build({ workflowLocale: localization.workflowLocale }) }}">{{ localization.label }}</a></li>
+    {% endfor %}
+  </ul>
+  {{ data.global._linkLocation._url }}
 {% endblock %}
 
 {% block main %}
